--- a/src.old/app/app.component.html
+++ b/src.old/app/app.component.html
@@ -1,6 +1,10 @@
 <mat-toolbar color="primary">
-  <span>Mapas</span>
+    <span>Mis mapas</span>
 </mat-toolbar>
+
+
 <div class="main-container">
-  <app-mapa></app-mapa>
+
+    <app-mapa></app-mapa>
+
 </div>
